# raygl

./: .gitignore  CMakeLists.txt  br.sh  notes.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: CMakeLists.txt
libs/tg/: CMakeLists.txt  img.cpp  img.hpp  shader_utils.cpp  shader_utils.hpp
libs/tl/tl/: basic.hpp
src/: main.cpp  utils.cpp  utils.hpp
src/shaders/: accum.glsl  cam_rays_frag.glsl  cam_rays_vert.glsl  frag.glsl  main_frag.glsl  main_vert.glsl  postpro.glsl  screen_tc.glsl  sphere.glsl  splat_tex.glsl  util.glsl  vert.glsl
